--- a/trunk/gtk.mod/IDE/ide.glade
+++ b/trunk/gtk.mod/IDE/ide.glade
@@ -2573,7 +2573,7 @@ Wir danken ganz herzlich den Entwicklern von Linux, GTK und Scintilla, ohne die 
 </widget>
 
 <widget class="GtkWindow" id="frmSkinScintilla">
-  <property name="width_request">300</property>
+  <property name="width_request">400</property>
   <property name="height_request">400</property>
   <property name="title" translatable="yes">Style-Manager</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
@@ -2601,6 +2601,82 @@ Wir danken ganz herzlich den Entwicklern von Linux, GTK und Scintilla, ohne die 
       <child>
 	<widget class="GtkFixed" id="fixed9">
 	  <property name="visible">True</property>
+
+	  <child>
+	    <widget class="GtkFrame" id="frame6">
+	      <property name="width_request">384</property>
+	      <property name="height_request">128</property>
+	      <property name="visible">True</property>
+	      <property name="label_xalign">0</property>
+	      <property name="label_yalign">0.5</property>
+	      <property name="shadow_type">GTK_SHADOW_NONE</property>
+
+	      <child>
+		<widget class="GtkAlignment" id="alignment10">
+		  <property name="visible">True</property>
+		  <property name="xalign">0.5</property>
+		  <property name="yalign">0.5</property>
+		  <property name="xscale">1</property>
+		  <property name="yscale">1</property>
+		  <property name="top_padding">0</property>
+		  <property name="bottom_padding">0</property>
+		  <property name="left_padding">12</property>
+		  <property name="right_padding">0</property>
+
+		  <child>
+		    <widget class="GtkFixed" id="fixed10">
+		      <property name="visible">True</property>
+		    </widget>
+		  </child>
+		</widget>
+	      </child>
+
+	      <child>
+		<widget class="GtkLabel" id="label60">
+		  <property name="visible">True</property>
+		  <property name="label" translatable="yes">Vorschau</property>
+		  <property name="use_underline">False</property>
+		  <property name="use_markup">True</property>
+		  <property name="justify">GTK_JUSTIFY_LEFT</property>
+		  <property name="wrap">False</property>
+		  <property name="selectable">False</property>
+		  <property name="xalign">0.5</property>
+		  <property name="yalign">0.5</property>
+		  <property name="xpad">0</property>
+		  <property name="ypad">0</property>
+		  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+		  <property name="width_chars">-1</property>
+		  <property name="single_line_mode">False</property>
+		  <property name="angle">0</property>
+		</widget>
+		<packing>
+		  <property name="type">label_item</property>
+		</packing>
+	      </child>
+	    </widget>
+	    <packing>
+	      <property name="x">8</property>
+	      <property name="y">240</property>
+	    </packing>
+	  </child>
+
+	  <child>
+	    <widget class="GtkFontButton" id="fontbutton1">
+	      <property name="width_request">272</property>
+	      <property name="height_request">40</property>
+	      <property name="visible">True</property>
+	      <property name="can_focus">True</property>
+	      <property name="show_style">True</property>
+	      <property name="show_size">True</property>
+	      <property name="use_font">False</property>
+	      <property name="use_size">False</property>
+	      <property name="focus_on_click">True</property>
+	    </widget>
+	    <packing>
+	      <property name="x">56</property>
+	      <property name="y">40</property>
+	    </packing>
+	  </child>
 	</widget>
 	<packing>
 	  <property name="padding">0</property>
