--- a/trunk/gtk.mod/IDE/ide.glade
+++ b/trunk/gtk.mod/IDE/ide.glade
@@ -675,6 +675,36 @@
 		  </child>
 
 		  <child>
+		    <widget class="GtkToolButton" id="toolbutton13">
+		      <property name="visible">True</property>
+		      <property name="stock_id">gtk-cancel</property>
+		      <property name="visible_horizontal">True</property>
+		      <property name="visible_vertical">True</property>
+		      <property name="is_important">True</property>
+		      <signal name="clicked" handler="bb_HelpBrowser_stopLoad" last_modification_time="Sun, 28 May 2006 17:21:35 GMT"/>
+		    </widget>
+		    <packing>
+		      <property name="expand">False</property>
+		      <property name="homogeneous">True</property>
+		    </packing>
+		  </child>
+
+		  <child>
+		    <widget class="GtkToolButton" id="toolbutton15">
+		      <property name="visible">True</property>
+		      <property name="stock_id">gtk-refresh</property>
+		      <property name="visible_horizontal">True</property>
+		      <property name="visible_vertical">True</property>
+		      <property name="is_important">True</property>
+		      <signal name="clicked" handler="bb_HelpBrowser_Reload" last_modification_time="Sun, 28 May 2006 17:24:21 GMT"/>
+		    </widget>
+		    <packing>
+		      <property name="expand">False</property>
+		      <property name="homogeneous">True</property>
+		    </packing>
+		  </child>
+
+		  <child>
 		    <widget class="GtkToolButton" id="toolbutton11">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_Startseite</property>
@@ -692,7 +722,7 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkToolButton" id="toolbutton12">
+		    <widget class="GtkToolButton" id="toolbutton14">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">BlitzPortal</property>
 		      <property name="use_underline">True</property>
@@ -700,68 +730,11 @@
 		      <property name="visible_horizontal">True</property>
 		      <property name="visible_vertical">True</property>
 		      <property name="is_important">True</property>
-		      <signal name="clicked" handler="bb_HelpBrowser_goPortal" last_modification_time="Fri, 26 May 2006 14:10:49 GMT"/>
+		      <signal name="clicked" handler="bb_HelpBrowser_goPortal" last_modification_time="Sun, 28 May 2006 17:23:59 GMT"/>
 		    </widget>
 		    <packing>
 		      <property name="expand">False</property>
 		      <property name="homogeneous">True</property>
-		    </packing>
-		  </child>
-		</widget>
-		<packing>
-		  <property name="padding">0</property>
-		  <property name="expand">False</property>
-		  <property name="fill">False</property>
-		</packing>
-	      </child>
-
-	      <child>
-		<placeholder/>
-	      </child>
-
-	      <child>
-		<widget class="GtkHBox" id="hbox6">
-		  <property name="visible">True</property>
-		  <property name="homogeneous">False</property>
-		  <property name="spacing">0</property>
-
-		  <child>
-		    <widget class="GtkLabel" id="label45">
-		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">label45</property>
-		      <property name="use_underline">False</property>
-		      <property name="use_markup">False</property>
-		      <property name="justify">GTK_JUSTIFY_LEFT</property>
-		      <property name="wrap">False</property>
-		      <property name="selectable">False</property>
-		      <property name="xalign">0.5</property>
-		      <property name="yalign">0.5</property>
-		      <property name="xpad">0</property>
-		      <property name="ypad">0</property>
-		      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-		      <property name="width_chars">-1</property>
-		      <property name="single_line_mode">False</property>
-		      <property name="angle">0</property>
-		    </widget>
-		    <packing>
-		      <property name="padding">0</property>
-		      <property name="expand">True</property>
-		      <property name="fill">True</property>
-		    </packing>
-		  </child>
-
-		  <child>
-		    <widget class="GtkProgressBar" id="progressbar1">
-		      <property name="visible">True</property>
-		      <property name="orientation">GTK_PROGRESS_LEFT_TO_RIGHT</property>
-		      <property name="fraction">0</property>
-		      <property name="pulse_step">0.10000000149</property>
-		      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-		    </widget>
-		    <packing>
-		      <property name="padding">0</property>
-		      <property name="expand">False</property>
-		      <property name="fill">False</property>
 		    </packing>
 		  </child>
 		</widget>
