--- a/trunk/gtk.mod/IDE/ide.glade
+++ b/trunk/gtk.mod/IDE/ide.glade
@@ -2683,32 +2683,6 @@ Wir danken ganz herzlich den Entwicklern von Linux, GTK und Scintilla, ohne die 
 		      </child>
 
 		      <child>
-			<widget class="GtkLabel" id="label68">
-			  <property name="width_request">104</property>
-			  <property name="height_request">32</property>
-			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">label62</property>
-			  <property name="use_underline">False</property>
-			  <property name="use_markup">False</property>
-			  <property name="justify">GTK_JUSTIFY_LEFT</property>
-			  <property name="wrap">False</property>
-			  <property name="selectable">False</property>
-			  <property name="xalign">0.5</property>
-			  <property name="yalign">0.5</property>
-			  <property name="xpad">0</property>
-			  <property name="ypad">0</property>
-			  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-			  <property name="width_chars">-1</property>
-			  <property name="single_line_mode">False</property>
-			  <property name="angle">0</property>
-			</widget>
-			<packing>
-			  <property name="x">8</property>
-			  <property name="y">96</property>
-			</packing>
-		      </child>
-
-		      <child>
 			<widget class="GtkColorButton" id="colorbutton6">
 			  <property name="width_request">50</property>
 			  <property name="height_request">29</property>
@@ -2806,21 +2780,6 @@ Wir danken ganz herzlich den Entwicklern von Linux, GTK und Scintilla, ohne die 
 		      </child>
 
 		      <child>
-			<widget class="GtkColorButton" id="colorbutton3">
-			  <property name="width_request">50</property>
-			  <property name="height_request">29</property>
-			  <property name="visible">True</property>
-			  <property name="can_focus">True</property>
-			  <property name="use_alpha">False</property>
-			  <property name="focus_on_click">True</property>
-			</widget>
-			<packing>
-			  <property name="x">296</property>
-			  <property name="y">96</property>
-			</packing>
-		      </child>
-
-		      <child>
 			<widget class="GtkLabel" id="label63">
 			  <property name="width_request">104</property>
 			  <property name="height_request">32</property>
@@ -2847,25 +2806,7 @@ Wir danken ganz herzlich den Entwicklern von Linux, GTK und Scintilla, ohne die 
 		      </child>
 
 		      <child>
-			<widget class="GtkFontButton" id="fontbutton1">
-			  <property name="width_request">160</property>
-			  <property name="height_request">29</property>
-			  <property name="visible">True</property>
-			  <property name="can_focus">True</property>
-			  <property name="show_style">True</property>
-			  <property name="show_size">True</property>
-			  <property name="use_font">False</property>
-			  <property name="use_size">False</property>
-			  <property name="focus_on_click">True</property>
-			</widget>
-			<packing>
-			  <property name="x">184</property>
-			  <property name="y">56</property>
-			</packing>
-		      </child>
-
-		      <child>
-			<widget class="GtkColorButton" id="colorbutton5">
+			<widget class="GtkColorButton" id="colorbutton3">
 			  <property name="width_request">50</property>
 			  <property name="height_request">29</property>
 			  <property name="visible">True</property>
@@ -2874,13 +2815,87 @@ Wir danken ganz herzlich den Entwicklern von Linux, GTK und Scintilla, ohne die 
 			  <property name="focus_on_click">True</property>
 			</widget>
 			<packing>
-			  <property name="x">112</property>
-			  <property name="y">56</property>
+			  <property name="x">296</property>
+			  <property name="y">96</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkButton" id="button11">
+			  <property name="width_request">96</property>
+			  <property name="height_request">32</property>
+			  <property name="visible">True</property>
+			  <property name="can_focus">True</property>
+			  <property name="label">gtk-save</property>
+			  <property name="use_stock">True</property>
+			  <property name="relief">GTK_RELIEF_NORMAL</property>
+			  <property name="focus_on_click">True</property>
+			</widget>
+			<packing>
+			  <property name="x">256</property>
+			  <property name="y">8</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkComboBox" id="combobox2">
+			  <property name="width_request">160</property>
+			  <property name="height_request">32</property>
+			  <property name="visible">True</property>
+			  <property name="add_tearoffs">False</property>
+			  <property name="focus_on_click">True</property>
+			</widget>
+			<packing>
+			  <property name="x">0</property>
+			  <property name="y">8</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkButton" id="button12">
+			  <property name="width_request">96</property>
+			  <property name="height_request">32</property>
+			  <property name="visible">True</property>
+			  <property name="can_focus">True</property>
+			  <property name="label">gtk-open</property>
+			  <property name="use_stock">True</property>
+			  <property name="relief">GTK_RELIEF_NORMAL</property>
+			  <property name="focus_on_click">True</property>
+			</widget>
+			<packing>
+			  <property name="x">160</property>
+			  <property name="y">8</property>
 			</packing>
 		      </child>
 
 		      <child>
 			<widget class="GtkLabel" id="label67">
+			  <property name="width_request">112</property>
+			  <property name="height_request">32</property>
+			  <property name="visible">True</property>
+			  <property name="label" translatable="yes">Hintergrundfarbe</property>
+			  <property name="use_underline">False</property>
+			  <property name="use_markup">False</property>
+			  <property name="justify">GTK_JUSTIFY_LEFT</property>
+			  <property name="wrap">False</property>
+			  <property name="selectable">False</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+			  <property name="width_chars">-1</property>
+			  <property name="single_line_mode">False</property>
+			  <property name="angle">0</property>
+			</widget>
+			<packing>
+			  <property name="x">0</property>
+			  <property name="y">56</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkLabel" id="label68">
 			  <property name="width_request">104</property>
 			  <property name="height_request">32</property>
 			  <property name="visible">True</property>
@@ -2901,61 +2916,42 @@ Wir danken ganz herzlich den Entwicklern von Linux, GTK und Scintilla, ohne die 
 			</widget>
 			<packing>
 			  <property name="x">8</property>
+			  <property name="y">96</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkColorButton" id="cbBGColor">
+			  <property name="width_request">50</property>
+			  <property name="height_request">29</property>
+			  <property name="visible">True</property>
+			  <property name="can_focus">True</property>
+			  <property name="use_alpha">False</property>
+			  <property name="focus_on_click">True</property>
+			  <signal name="color_set" handler="bb_StyleMaker_SetStyle" last_modification_time="Fri, 02 Jun 2006 13:29:22 GMT"/>
+			</widget>
+			<packing>
+			  <property name="x">112</property>
 			  <property name="y">56</property>
 			</packing>
 		      </child>
 
 		      <child>
-			<widget class="GtkEntry" id="entry1">
+			<widget class="GtkFontButton" id="fb_Stylemaker">
 			  <property name="width_request">160</property>
-			  <property name="height_request">32</property>
+			  <property name="height_request">29</property>
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="editable">True</property>
-			  <property name="visibility">True</property>
-			  <property name="max_length">0</property>
-			  <property name="text" translatable="yes"></property>
-			  <property name="has_frame">True</property>
-			  <property name="invisible_char">●</property>
-			  <property name="activates_default">False</property>
-			</widget>
-			<packing>
-			  <property name="x">0</property>
-			  <property name="y">8</property>
-			</packing>
-		      </child>
-
-		      <child>
-			<widget class="GtkButton" id="button11">
-			  <property name="width_request">96</property>
-			  <property name="height_request">32</property>
-			  <property name="visible">True</property>
-			  <property name="can_focus">True</property>
-			  <property name="label">gtk-save</property>
-			  <property name="use_stock">True</property>
-			  <property name="relief">GTK_RELIEF_NORMAL</property>
+			  <property name="show_style">True</property>
+			  <property name="show_size">True</property>
+			  <property name="use_font">True</property>
+			  <property name="use_size">False</property>
 			  <property name="focus_on_click">True</property>
+			  <signal name="font_set" handler="bb_StyleMaker_SetStyle" last_modification_time="Fri, 02 Jun 2006 13:29:38 GMT"/>
 			</widget>
 			<packing>
-			  <property name="x">160</property>
-			  <property name="y">8</property>
-			</packing>
-		      </child>
-
-		      <child>
-			<widget class="GtkButton" id="button12">
-			  <property name="width_request">96</property>
-			  <property name="height_request">32</property>
-			  <property name="visible">True</property>
-			  <property name="can_focus">True</property>
-			  <property name="label">gtk-open</property>
-			  <property name="use_stock">True</property>
-			  <property name="relief">GTK_RELIEF_NORMAL</property>
-			  <property name="focus_on_click">True</property>
-			</widget>
-			<packing>
-			  <property name="x">256</property>
-			  <property name="y">8</property>
+			  <property name="x">184</property>
+			  <property name="y">56</property>
 			</packing>
 		      </child>
 		    </widget>
