--- a/trunk/gtk.mod/IDE/ide.glade
+++ b/trunk/gtk.mod/IDE/ide.glade
@@ -2215,7 +2215,7 @@
   <property name="name" translatable="yes">BlitzMax-IDE 0.2</property>
   <property name="copyright" translatable="yes">(c) 2005-2006 Michael Sytko und Philipp Kerling</property>
   <property name="comments" translatable="yes">Entwickler-Version</property>
-  <property name="license" translatable="yes">		    GNU GENERAL PUBLIC LICENSE
+  <property name="license">		    GNU GENERAL PUBLIC LICENSE
 		       Version 2, June 1991
 
  Copyright (C) 1989, 1991 Free Software Foundation, Inc.
