--- a/trunk/gtk.mod/IDE/ide.glade
+++ b/trunk/gtk.mod/IDE/ide.glade
@@ -1083,12 +1083,12 @@
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
 		      <property name="headers_visible">True</property>
-		      <property name="rules_hint">False</property>
+		      <property name="rules_hint">True</property>
 		      <property name="reorderable">True</property>
 		      <property name="enable_search">True</property>
 		      <property name="fixed_height_mode">False</property>
 		      <property name="hover_selection">True</property>
-		      <property name="hover_expand">False</property>
+		      <property name="hover_expand">True</property>
 		    </widget>
 		  </child>
 		</widget>
