--- a/trunk/gtk.mod/IDE/ide.glade
+++ b/trunk/gtk.mod/IDE/ide.glade
@@ -1088,7 +1088,7 @@
 		      <property name="enable_search">True</property>
 		      <property name="fixed_height_mode">False</property>
 		      <property name="hover_selection">True</property>
-		      <property name="hover_expand">True</property>
+		      <property name="hover_expand">False</property>
 		    </widget>
 		  </child>
 		</widget>
@@ -1131,15 +1131,15 @@
 		  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 		  <child>
-		    <widget class="GtkTreeView" id="treeview4">
+		    <widget class="GtkTreeView" id="tvCODE">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
 		      <property name="headers_visible">True</property>
-		      <property name="rules_hint">False</property>
+		      <property name="rules_hint">True</property>
 		      <property name="reorderable">False</property>
 		      <property name="enable_search">True</property>
 		      <property name="fixed_height_mode">False</property>
-		      <property name="hover_selection">False</property>
+		      <property name="hover_selection">True</property>
 		      <property name="hover_expand">False</property>
 		    </widget>
 		  </child>
@@ -1151,7 +1151,7 @@
 	      </child>
 
 	      <child>
-		<widget class="GtkLabel" id="tvCODE">
+		<widget class="GtkLabel" id="labelcode">
 		  <property name="visible">True</property>
 		  <property name="label" translatable="yes">Code</property>
 		  <property name="use_underline">False</property>
